@@ -553,17 +553,17 @@ function VanasKoSDataGatherer:Update()
 		self:EnableDataGathering(true)
 	end
 
-	if (C_PvP.IsWarModeActive() and not self.db.profile.EnableInWarMode) then
+	if (C_PvP.IsWarModeDesired() and not self.db.profile.EnableInWarMode) then
 		self:EnableTargetEvents(false)
 		self:EnableCombatEvents(false)
-	elseif (not C_PvP.IsWarModeActive() and self.db.profile.EnableInNormalMode) then
+	elseif (not C_PvP.IsWarModeDesired() and not self.db.profile.EnableInNormalMode) then
 		self:EnableTargetEvents(false)
 		self:EnableCombatEvents(false)
 	end
 
-	if (C_PvP.IsWarModeActive() and not self.db.profile.GatherInWarMode) then
+	if (C_PvP.IsWarModeDesired() and not self.db.profile.GatherInWarMode) then
 		self:EnableDataGathering(false)
-	elseif (not C_PvP.IsWarModeActive() and self.db.profile.GatherInNormalMode) then
+	elseif (not C_PvP.IsWarModeDesired() and not self.db.profile.GatherInNormalMode) then
 		self:EnableDataGathering(false)
 	end
 end
